# Abstract2Title

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
abstract2title/: app.py  paths.py
abstract2title/data/: data.py  dataset.py  make_database.py
abstract2title/data/raw/: download_arxiv_data.py
abstract2title/src/: utils.py
abstract2title/src/pipeline/model_testing/: test_BART.py
abstract2title/src/pipeline/model_training/: train.py  train_BART.py  train_seq2seq.py  utils.py
abstract2title/templates/: result.html
scripts/: testing_wikitext.py  train.py
src/: utils.py
src/data/: data.py  dataset.py  make_database.py
src/data/raw/: download_arxiv_data.py
src/model/: gpt2_model.py
src/pipeline/model_testing/: test_BART.py  test_GPT2.py  test_Seq2Seq.py  test_T5.py  test_bart.py
src/pipeline/model_training/: train.py  train_BART.py  train_GPT2.py  train_PEGASUS.py  train_Seq2Seq.py  train_T5.py  utils.py
templates/: index.html
tests/: test_gpt2.py
